# contextplus-rs

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  e2e_test.py  e2e_test.sh
.claude/agents/: code-reviewer.md  qa-expert.md  rust-engineer.md  security-auditor.md
.github/workflows/: ci.yml
benches/: blast_radius.rs  cache_load.rs  clustering.rs  context_tree.rs  cosine_scan.rs  identifier_score.rs  search_query.rs  tree_sitter_parse.rs  walker.rs
docs/plans/: 2026-03-07-feat-contextplus-rs-plan.md  2026-05-06-001-feat-contextplus-multi-worktree-daemon-plan.md
examples/: quick_bench.rs
scripts/: smoke-test.sh
src/: config.rs  error.rs  lib.rs  main.rs  ref_index.rs  server.rs  server_adapters.rs  server_definitions.rs  server_helpers.rs
src/cache/: cas.rs  mod.rs  rkyv_store.rs
src/core/: clustering.rs  dependent_expand.rs  embedding_tracker.rs  embeddings.rs  git_worktree.rs  head_watcher.rs  hub.rs  import_resolver.rs  memory_graph.rs  memory_merge.rs  mod.rs  parser.rs  path_translation.rs  process_lifecycle.rs  safe_path.rs  tree_sitter.rs  utils.rs  walker.rs
src/core/.mcp_data/: navigate-labels.json  navigate-nomic-embed-text.rkyv
src/git/: diff.rs  hooks.rs  mod.rs  shadow.rs
src/tools/: blast_radius.rs  context_tree.rs  dead_code_find.rs  dependency_loop_detect.rs  embedding_quality_check.rs  feature_hub.rs  file_skeleton.rs  labels.rs  lexical_search.rs  memory_tools.rs  mod.rs  navigate_constants.rs  pr_review.rs  propose_commit.rs  risk_score.rs  scoring.rs  semantic_identifiers.rs  semantic_navigate.rs  semantic_search.rs  static_analysis.rs
src/tools/.mcp_data/: navigate-labels.json  navigate-nomic-embed-text.rkyv
src/tools/modes/: hybrid.rs  imports.rs  mod.rs  semantic.rs
src/transport/: client.rs  daemon.rs  dispatch.rs  mod.rs  paths.rs
tests/: daemon_transport.rs  fork_diff_only.rs  integration_tests.rs  memory_overlay_auto_merge.rs  multi_worktree_e2e.rs  warmup_throttle.rs
tests/common/: mock_ollama.rs  mod.rs
tests/fixtures/: legacy-navigate-labels.json
tests/fixtures/sample-project/docs/: ARCHITECTURE.md  README.md
tests/fixtures/sample-project/src/: auth.ts  main.ts
tests/fixtures/sample-project/src/forms/: createForm.ts  validateForm.ts
tests/fixtures/sample-project/src/utils/: config.rs  helpers.py
