[package]
name = "contextplus-rs"
version = "0.1.0"
edition = "2024"
description = "High-performance MCP server for semantic code analysis via Ollama embeddings"
license = "MIT"
repository = "https://github.com/mrsufgi/contextplus-rs"

[lib]
name = "contextplus_rs"
path = "src/lib.rs"

[[bin]]
name = "contextplus-rs"
path = "src/main.rs"

[dependencies]
# MCP SDK (v1.1.0 — stable, #[tool] macros, stdio transport)
rmcp = { version = "1", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Tree-sitter (native, compile-time linked — versions per-crate)
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.25"

# Vector SIMD cosine similarity (returns distance, use 1.0 - d for similarity)
simsimd = "6"

# Zero-copy serialization + memory mapping
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }

# File watching
notify = "7"
notify-debouncer-full = "0.7"

# Spectral clustering
nalgebra = "0.33"

# Graph
petgraph = "0.7"

# File walking (gitignore-aware, from ripgrep)
ignore = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"

# Random (for restore point IDs)
rand = "0.8"

[dev-dependencies]
# Mock HTTP server (for Ollama API)
wiremock = "0.6"

# CLI testing
assert_cmd = "2"
predicates = "3"

# Temp directories for isolated tests
tempfile = "3"

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Async test support
tokio-test = "0.4"

[[bench]]
name = "cache_load"
harness = false

[[bench]]
name = "cosine_scan"
harness = false

[[bench]]
name = "tree_sitter_parse"
harness = false

[[bench]]
name = "search_query"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
